# imprint

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPO_MAP.md  SECURITY.md  imprint.config.example.yaml  pyproject.toml  vercel.json
.github/workflows/: tests.yml
docs/: AGENT_CONSUMER_CONTRACT.md  API_CONTRACT.md  ARCHITECTURE.md  ARCHITECTURE_CHALLENGE.md  ARTIFACT_STORAGE_POLICY.md  BATCH_SERVICE_PARITY.md  BROADSIDE_INTEGRATION.md  BUILD_PLAN.md  CLASSIFICATION_DESIGN.md  CLASSIFICATION_PERFORMANCE.md  CLASSIFICATION_RULES.md  COMPILER_DESIGN.md  CONFIDENCE_MODEL.md  CONFIGURATION.md  CONNECTOR_AUDIT_LOG.md  CONNECTOR_FRAMEWORK.md  CONNECTOR_GUIDE.md  CONNECTOR_IMPLEMENTATION_STANDARD.md  CONNECTOR_REPLAY_MANIFEST.md  CONNECTOR_SYNTHETIC_FIXTURE_STANDARD.md  CONSENT_AND_MULTI_PERSON_POLICY.md  CONSENT_BOUNDARY_MODEL.md  CONSUMER_CONTRACTS.md  CREDENTIAL_STORAGE_POLICY.md  DATABASE_CONNECTOR_THREAT_MODEL.md  DECISIONS.md  DERIVED_PROFILE_MODEL.md  DOWNSTREAM_INTEGRATIONS.md  EVIDENCE_AND_CONFIDENCE.md  EVIDENCE_MODEL.md  EXPORT_BOUNDARIES.md  EXPORT_FORMATS.md  EXTRACTOR_VERSIONING.md  FIRST_RUN_EXPERIENCE.md  FIRST_RUN_OUTPUT.md  FIVE_YEAR_RISKS.md  GAP_ANALYSIS.md  GMAIL_CONNECTOR_THREAT_MODEL.md  IMESSAGE_CONNECTOR_THREAT_MODEL.md  IMPLEMENTATION_DRIFT.md  (+69 more)
docs/sprints/: SPRINT_01.md  SPRINT_01_5.md  (+55 more)
examples/: README.md
tests/: test_adapters.py  test_classification.py  test_compiler.py  test_connectors.py  test_consumers.py  test_exports.py  test_onboarding.py  test_quality_gates.py  test_schemas.py  test_service.py  test_signals.py
web/: .gitignore  DEPLOYMENT.md  index.html  og-gen.json  styles.css  theme.js  vercel.json
(+74 files in other folders)
