[project]
name = "imprint"
version = "0.1.0"
description = "Public-first identity and expression profile compiler"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Imprint contributors" }]
keywords = ["expression-profile", "local-first", "privacy", "synthetic-fixtures"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
]
dependencies = [
  "pydantic>=2.0",
  "typer>=0.12",
  "rich>=13.0",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://imprint.niclydon.dev"
Repository = "https://github.com/niclydon/imprint"
Documentation = "https://github.com/niclydon/imprint/tree/main/docs"

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
test = ["pytest>=8.0"]

[project.scripts]
imprint = "imprint.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
